# monorepo

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  z.sh
.claude/skills/: README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cleanup-images.yml  detect-changed-directories.yaml  detect-changed-directories.yml.disabled  docker-build.yml  get-changed-directories-action.yml  get-changed-directories-step.yml  manual-deploy.yml  manual-deploy.yml.disabled  manual-malware-check.yml  pullrequest-check.yml  push.yaml  sync-manual-deploy-targets.yml
deploy/: bifrost.yml  chatbot-ui.yml  dozzle.yml  edit-vid.yml  fastapi-mcp-server.yml  file-server.yml  hono-mcp-server.yml  litellm.yml  mcp-inspector.yml  portal.yml  portfolio.yml  u7agent.yml  u7chat.yml
deploy/abolished/: chat-mcp-client.yml  chatbot-ui.yml  fastapi-mcp-server.yml
dev/portfolio/: docker-compose.dev.yml  docker-compose.yml
docker/: devcontainer.python.json
docker/portfolio/: .env.example  .env.secret.example  docker-compose.dev.yml  docker-compose.yml
docker/python/: Dockerfile
docs/: CICDについて.md  about-cicd.md  dependabot-guide.md  license-check.md  projects-classification.md  server-maintenance-guide.md  自宅サーバーの保守手順.md
docs/agent/: commands.md
docs/llm/: .env.example  README.md  gemini-chat.http  litellm-image-generation.http  openai-chat.http  xai-chat.http
issues/: 373.md
projects/: README.md
projects/ai-driven-dev-sample/: README.md
projects/browser-auto/: .dockerignore  .oxfmtrc.json  AGENTS.md  Dockerfile  README.md  package.json  tsconfig.json
projects/chat-mcp-client/: .env.example  AGENTS.md  Dockerfile  README.md  biome.json  package.json  test-chat.sh
projects/chatbot-ui/: .gitignore  Dockerfile  README.md  biome.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
projects/cicd-cd-sample/: README.md
projects/cicd-ci-sample/: Dockerfile  README.md
projects/demo-greeting-lib/: README.md
projects/edit-vid/: .gitignore  Dockerfile  README.md  index.html  main.py  pyproject.toml
projects/edit-vid2/: .env.example  .gitignore  .oxfmtrc.json  AGENTS.md  Dockerfile  README.md  drizzle.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsr.config.json  vite.config.ts
projects/example-lib-b/: package.json
projects/example-reactui-lib/: package.json  vite.config.ts
projects/fastapi-api-base/: Dockerfile  README.md  pyproject.toml
projects/labs/backend-sse-chat-poc/: .dockerignore  Dockerfile  README.md  pyproject.toml
projects/llm-wrapper-api/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
projects/llm-wrapper-api/.devcontainer/: Dockerfile  devcontainer.json
projects/llm-wrapper-api/tests/: test_main.py
projects/nix-example/: .gitignore  README.md  pyproject.toml
projects/nix-example/.kiro/specs/nix-python-executor/: requirements.md  tasks.md
projects/nix-example/app/: main.py  models.py
projects/nix-example/app/routers/: __init__.py
projects/nix-example/app/tests/: conftest.py  test_main.py
projects/openai_response_example/: .gitignore  README.md  pyproject.toml
projects/portal/: Dockerfile  (+6 more)
projects/samples/ai-driven-dev-sample/: pyproject.toml
projects/samples/ai-driven-dev-sample/src/: main.py
projects/simple-agent-poc/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  agents.yaml  pyproject.toml
projects/simple-agent-poc/.claude/skills/: README.md
projects/simple-agent-poc/.claude/skills/agent-cli-debug/: SKILL.md
projects/simple-agent-poc/.claude/skills/agent-cli-debug/agents/: openai.yaml
projects/simple-agent-poc/.claude/skills/architecture/: SKILL.md
projects/simple-agent-poc/.claude/skills/development/: SKILL.md
projects/simple-agent-poc/.claude/skills/testing/: SKILL.md
projects/simple-agent-poc/.devcontainer/: devcontainer.json
projects/simple-agent-poc/docs/: agent-definition.md  api.md  architecture.md  bootstrap.md  cli.md  development.md  errors.md  llm-integration.md  logging.md  session.md  sse.md  testing.md  types.md
projects/simple-agent-poc/plans/: 2026-02-23_simple-agent-poc_add-system-prompt_v1.md  integration-portfolio.md
projects/simple-agent-poc/src/: main.py
projects/simple-agent-poc/src/simple_agent_poc/: __init__.py  agent.py  api.py  application.py  bootstrap.py  cli.py  interfaces.py  llm_client.py  main.py  main_api.py  renderer.py  types.py
projects/simple-agent-poc/src/simple_agent_poc/adapters/: __init__.py
projects/simple-agent-poc/src/simple_agent_poc/adapters/cli/: __init__.py  adapter.py  renderer.py
projects/simple-agent-poc/src/simple_agent_poc/adapters/execution_worker/: __init__.py  client.py
projects/simple-agent-poc/src/simple_agent_poc/adapters/http/: __init__.py  api.py  test_page.py
projects/simple-agent-poc/src/simple_agent_poc/adapters/llm/: __init__.py  litellm_client.py
projects/simple-agent-poc/src/simple_agent_poc/adapters/session_store/: __init__.py  in_memory.py
projects/simple-agent-poc/src/simple_agent_poc/adapters/tools/: ask_user.py  concat.py  execute_javascript.py  get_current_time.py  registry.py
projects/simple-agent-poc/src/simple_agent_poc/application/: __init__.py  dto.py  ports.py  use_cases.py
projects/simple-agent-poc/src/simple_agent_poc/core/: __init__.py  agent_definition.py  session.py  types.py
projects/simple-agent-poc/src/simple_agent_poc/entrypoints/: __init__.py  bootstrap.py  main_api.py  main_cli.py
projects/simple-agent-poc/src/simple_agent_poc/observability/: __init__.py
projects/simple-agent-poc/tests/: __init__.py  conftest.py  helpers.py  test_agent.py  test_agent_definition.py  test_api.py  test_application.py  test_cli.py  test_execution_worker_client.py  test_execution_worker_tool.py  test_http_stream_api.py  test_interfaces.py  test_llm_client.py  test_logging.py  test_main.py  test_main_api.py  test_renderer.py  test_session.py  test_tools.py  test_types.py  test_use_cases.py  test_use_cases_stream.py
scripts/: check-licenses  check_licenses.py  license-policy.json
(+1205 files in other folders)
