[project]
name = "openai-async-example"
version = "0.1.0"
description = "Minimal async Responses API example with the OpenAI Python SDK"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=1.109.0",
]

[project.scripts]
dev = "main:cli"
check = "main:check"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "ty>=0.0.22",
]

[tool.ruff]
target-version = "py314"
