[project]
name = "simple-agent-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "litellm>=1.81.14",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.46.0",
]

[project.scripts]
api = "simple_agent_poc.entrypoints.main_api:main"
dev = "simple_agent_poc.entrypoints.main_cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ruff>=0.15.12",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ty>=0.0.32",
]

[tool.hatch.build.targets.wheel]
packages = ["src/simple_agent_poc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/simple_agent_poc"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]
