[project]
name = "backend-sse-chat-poc"
version = "0.1.0"
description = "Backend-centric SSE chat PoC with FastAPI, Jinja2, and OpenAI streaming"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.121.0",
    "jinja2>=3.1.6",
    "openai>=2.7.1",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
dev = "backend_sse_chat_poc.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.15.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backend_sse_chat_poc"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
